r.import + t.register manuals: minor updates
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68510 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/r.import/r.import.html
+++ b/scripts/r.import/r.import.html
@@ -86,7 +86,7 @@ r.colors srtmv3_resamp10m color=elevation
 
 
 <h3>Import of WorldClim data</h3>
-Import of a subset from WorldClim <a href="http://worldclim.org/current">Bioclim data set</a>,
+Import of a subset from WorldClim <a href="http://worldclim.org/bioclim">Bioclim data set</a>,
 to be reprojected to current location projection (North Carolina sample dataset).
 Different resolutions are available, in this example we use the 2.5 arc-minutes
 resolution data. During import, we spatially subset the world data to the 
@@ -94,9 +94,10 @@ North Carolina region using the <em>extent</em> parameter:
 
 <div class="code"><pre>
 # download selected Bioclim data (2.5 arc-minutes resolution)
+# optionally tiles are available for the 30 arc-sec resolution
 wget http://biogeo.ucdavis.edu/data/climate/worldclim/1_4/grid/cur/bio_2-5m_bil.zip
 
-# extract BIO1 from package:
+# extract BIO1 from package (BIO1 = Annual Mean Temperature):
 unzip bio_2-5m_bil.zip bio1.bil bio1.hdr
 
 # prior to import, fix broken WorldClim extent using GDAL tool
@@ -110,6 +111,7 @@ g.region -d res=4000 -ap
 r.import input=bio1_fixed.tif output=bioclim01 resample=bilinear \
          extent=region resolution=region -n
 
+# temperature data are in &deg;C * 10
 r.info bioclim01
 r.univar -e bioclim01
 </pre></div>
