manual: remove outdated g.setproj link; minor cleanup
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@68523 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/m.proj/m.proj.html
+++ b/scripts/m.proj/m.proj.html
@@ -16,7 +16,7 @@ WGS84.
 designed to determine the equivalent coordinate values of an
 individual position or list of
 positions. Use <em><a href="v.proj.html">v.proj</a></em> to reproject
-vector maps or <em><a href="r.proj.html">r.proj<a/></em> for raster maps.
+vector maps or <em><a href="r.proj.html">r.proj</a></em> for raster maps.
 
 
 <h2>NOTES</h2>
@@ -189,9 +189,7 @@ For more usage examples, see the documentation for the
 <a href="v.proj.html">v.proj</a>,
 <a href="r.proj.html">r.proj</a>,
 <a href="g.proj.html">g.proj</a>,
-<!--<a href="g.setproj.html">g.setproj</a>,-->
 <a href="i.rectify.html">i.rectify</a>,
-<!-- <a href="i.rectify3.html">i.rectify3</a> -->
 <a href="v.in.ascii.html">v.in.ascii</a>,
 <a href="v.out.ascii.html">v.out.ascii</a>
 </em>
