--- a/general/g.proj/g.proj.html
+++ b/general/g.proj/g.proj.html
@@ -230,10 +230,12 @@ ogr2ogr -t_srs "`g.proj -wf`" polbnda_italy_GB_ovest.shp polbnda_italy_LL.shp
 <h2>SEE ALSO</h2>
  
 <em>
-<a href="g.setproj.html">g.setproj</a>,
+<a href="m.proj.html">m.proj</a>,
 <a href="r.proj.html">r.proj</a>,
 <a href="v.proj.html">v.proj</a>,
+<a href="r.import.html">r.import</a>,
 <a href="r.in.gdal.html">r.in.gdal</a>,
+<a href="v.import.html">v.import</a>,
 <a href="v.in.ogr.html">v.in.ogr</a>
 </em>
 
