--- a/raster/r.clump/r.clump.html
+++ b/raster/r.clump/r.clump.html
@@ -1,9 +1,9 @@
 <h2>DESCRIPTION</h2>
 
-<em>r.clump</em> finds all areas of contiguous cell category values in
-the input raster map. NULL values in the input are ignored. It assigns 
-a unique category value to each such area (&quot;clump&quot;) in the 
-resulting output raster map.
+<em>r.clump</em> finds all areas of contiguous cell category values 
+(connected components) in the input raster map. NULL values in the 
+input are ignored. It assigns a unique category value to each such area 
+(&quot;clump&quot;) in the resulting output raster map.
 
 <p>
 Category distinctions in the input raster map are preserved.  This
@@ -12,6 +12,25 @@ clumped together. The user can
 run <em><a href="r.reclass.html">r.reclass</a></em> prior
 to <em>r.clump</em> to recategorize cells and reassign cell category
 values.
+
+<p>
+<em>r.clump</em> can also perform &quot;fuzzy&quot; clumping where 
+neighboring cells that are not identical but similar to each other are 
+clumped together. Here, the spectral distance between two cells is 
+scaled to the range [0, 1] and compared to the <em>threshold</em> 
+value. Cells are clumped together if their spectral distance is &le; 
+<em>threshold</em>. The result is very sensitive to this 
+<em>threshold</em> value, a recommended start value is 0.01, then 
+increasing or decreasing this value according to the desired output.
+
+<p>
+<em>r.clump</em> can also use multiple raster maps of any kind (CELL, 
+FCELL, DCELL) as input. In this case, the spectral distance between 
+cells is used to determine the similarity of two cells. This means that 
+input maps must be metric: the difference cell 1 - cell 2 must make 
+sense. Categorical maps, e.g. land cover, can not be used in this case. 
+Examples for valid inpat maps are satellite imagery, vegetation 
+indices, elevation, climatic parameters etc.
 
 <h2>NOTES</h2>
 
@@ -48,6 +67,13 @@ r.clump lakes out=lakes_individual
 
 # report sizes by individual waterbody
 r.report lakes_individual units=h
+</pre></div>
+
+<p>
+Perform fuzzy clumping on Landsat 7 2002 imagery (North Carolina sample dataset)
+<div class="code"><pre>
+r.clump in=lsat7_2002_10,lsat7_2002_20,lsat7_2002_30,lsat7_2002_40,lsat7_2002_50,lsat7_2002_70 \
+        out=lsat7_2002_clump_4 threshold=0.045
 </pre></div>
 
 <h2>SEE ALSO</h2>
